# nexus-ai

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  README.md  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json  turbo.json  vercel.json
.github/workflows/: cd.yml  ci.yml
ai-engine/: Dockerfile  requirements.txt  server.py
ai-engine/agents/: supervisor.py
ai-engine/memory/: store.py
ai-engine/rag/: pipeline.py
apps/web/: BUILD_APK.md  Dockerfile  capacitor.config.json  next.config.ts  package.json  tailwind.config.ts  (+1 more)
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/src/: main.py
backend/src/api/: deps.py  router.py
backend/src/api/v1/auth/: endpoints.py  schemas.py
backend/src/api/v1/automation/: endpoints.py  schemas.py
backend/src/api/v1/calendar/: endpoints.py  schemas.py
backend/src/api/v1/collaboration/: endpoints.py  schemas.py
backend/src/api/v1/documents/: endpoints.py  schemas.py
backend/src/api/v1/finance/: endpoints.py  schemas.py
backend/src/api/v1/news/: endpoints.py
backend/src/api/v1/notes/: endpoints.py  schemas.py
backend/src/api/v1/passwords/: endpoints.py
backend/src/api/v1/storage/: endpoints.py
backend/src/api/v1/tasks/: endpoints.py  schemas.py
backend/src/api/v1/trading/: endpoints.py  schemas.py
backend/src/config/: database.py  settings.py
backend/src/infrastructure/auth/: dependencies.py  jwt.py
backend/src/infrastructure/cache/: redis.py
backend/src/infrastructure/database/: models.py
backend/src/kernel/: base_model.py
backend/tests/: conftest.py  test_auth.py
(+20 files in other folders)
