[tool.poetry]
name = "nexus-backend"
version = "0.1.0"
description = "Nexus AI Backend API"
authors = ["Nexus AI Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { version = "^0.34.0", extras = ["standard"] }
pydantic = { version = "^2.10.0", extras = ["email"] }
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
httpx = "^0.28.0"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-multipart = "^0.0.18"
redis = "^5.2.0"
celery = "^5.4.0"
boto3 = "^1.36.0"
s3fs = "^2024.12.0"
pydantic-settings = "^2.7.0"
email-validator = "^2.2.0"
python-dotenv = "^1.0.1"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-community = "^0.3.0"
langgraph = "^0.2.0"
litellm = "^1.54.0"
pgvector = "^0.3.0"
sentry-sdk = { version = "^2.19.0", extras = ["fastapi"] }
prometheus-fastapi-instrumentator = "^7.0.0"
slowapi = "^0.1.9"
cryptography = "^44.0.0"
pyotp = "^2.9.0"
qrcode = "^7.4.0"
google-auth = "^2.37.0"
authlib = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
factory-boy = "^3.3.0"
faker = "^33.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "S", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
